App/logs/NewCamWithArrayZMQ.log
2020-12-14 04:03:31,852 - NewCamWithArrayZMQ - ERROR - Traceback (most recent call last):
  File ".\monitor.py", line 113, in pollFrame
    imdata=self.frameGetQ.recv_array(copy=False)
  File ".\zmqSerialSocket.py", line 48, in recv_array
    return A.reshape(md['shape'])
ValueError: cannot reshape array of size 37 into shape (480,640,3)

2020-12-14 04:03:31,879 - NewCamWithArrayZMQ - ERROR - Traceback (most recent call last):
  File ".\monitor.py", line 113, in pollFrame
    imdata=self.frameGetQ.recv_array(copy=False)
  File ".\zmqSerialSocket.py", line 45, in recv_array
    md = self.recv_json(flags=flags)
  File "C:\tools\miniconda3\envs\vmpw\lib\site-packages\zmq\sugar\socket.py", line 765, in recv_json
    return self._deserialize(msg, lambda buf: jsonapi.loads(buf, **kwargs))
  File "C:\tools\miniconda3\envs\vmpw\lib\site-packages\zmq\sugar\socket.py", line 590, in _deserialize
    return load(recvd)
  File "C:\tools\miniconda3\envs\vmpw\lib\site-packages\zmq\sugar\socket.py", line 765, in <lambda>
    return self._deserialize(msg, lambda buf: jsonapi.loads(buf, **kwargs))
  File "C:\tools\miniconda3\envs\vmpw\lib\site-packages\zmq\utils\jsonapi.py", line 54, in loads
    s = s.decode('utf8')
UnicodeDecodeError: 'utf-8' codec can't decode byte 0xe4 in position 0: invalid continuation byte

2020-12-14 04:06:40,536 - NewCamWithArrayZMQ - ERROR - Traceback (most recent call last):
  File ".\monitor.py", line 113, in pollFrame
    imdata=self.frameGetQ.recv_array(copy=False)
  File ".\zmqSerialSocket.py", line 48, in recv_array
    return A.reshape(md['shape'])
ValueError: cannot reshape array of size 37 into shape (480,640,3)

2020-12-14 04:06:40,540 - NewCamWithArrayZMQ - ERROR - Traceback (most recent call last):
  File ".\monitor.py", line 113, in pollFrame
    imdata=self.frameGetQ.recv_array(copy=False)
  File ".\zmqSerialSocket.py", line 45, in recv_array
    md = self.recv_json(flags=flags)
  File "C:\tools\miniconda3\envs\vmpw\lib\site-packages\zmq\sugar\socket.py", line 765, in recv_json
    return self._deserialize(msg, lambda buf: jsonapi.loads(buf, **kwargs))
  File "C:\tools\miniconda3\envs\vmpw\lib\site-packages\zmq\sugar\socket.py", line 590, in _deserialize
    return load(recvd)
  File "C:\tools\miniconda3\envs\vmpw\lib\site-packages\zmq\sugar\socket.py", line 765, in <lambda>
    return self._deserialize(msg, lambda buf: jsonapi.loads(buf, **kwargs))
  File "C:\tools\miniconda3\envs\vmpw\lib\site-packages\zmq\utils\jsonapi.py", line 54, in loads
    s = s.decode('utf8')
UnicodeDecodeError: 'utf-8' codec can't decode byte 0xe4 in position 0: invalid continuation byte

2020-12-14 04:06:40,545 - NewCamWithArrayZMQ - ERROR - Traceback (most recent call last):
  File ".\monitor.py", line 113, in pollFrame
    imdata=self.frameGetQ.recv_array(copy=False)
  File ".\zmqSerialSocket.py", line 45, in recv_array
    md = self.recv_json(flags=flags)
  File "C:\tools\miniconda3\envs\vmpw\lib\site-packages\zmq\sugar\socket.py", line 765, in recv_json
    return self._deserialize(msg, lambda buf: jsonapi.loads(buf, **kwargs))
  File "C:\tools\miniconda3\envs\vmpw\lib\site-packages\zmq\sugar\socket.py", line 590, in _deserialize
    return load(recvd)
  File "C:\tools\miniconda3\envs\vmpw\lib\site-packages\zmq\sugar\socket.py", line 765, in <lambda>
    return self._deserialize(msg, lambda buf: jsonapi.loads(buf, **kwargs))
  File "C:\tools\miniconda3\envs\vmpw\lib\site-packages\zmq\utils\jsonapi.py", line 54, in loads
    s = s.decode('utf8')
UnicodeDecodeError: 'utf-8' codec can't decode byte 0xe4 in position 0: invalid continuation byte

2020-12-14 12:17:50,586 - NewCamWithArrayZMQ - ERROR - Traceback (most recent call last):
  File ".\monitor.py", line 239, in run
    exec(code,globals(),locals())
  File "<string>", line 2
    self.vid.open(0)
    ^
IndentationError: unexpected indent

2020-12-14 12:17:51,118 - NewCamWithArrayZMQ - ERROR - Traceback (most recent call last):
  File ".\monitor.py", line 239, in run
    exec(code,globals(),locals())
  File "<string>", line 2
    self.vid.open(0)
    ^
IndentationError: unexpected indent

2020-12-14 12:18:02,962 - NewCamWithArrayZMQ - ERROR - Traceback (most recent call last):
  File ".\monitor.py", line 239, in run
    exec(code,globals(),locals())
  File "<string>", line 2
    self.vid.open(0)+
                    ^
SyntaxError: invalid syntax

